--- a/templates/base.html
+++ b/templates/base.html
@@ -269,10 +269,24 @@
                   </div>
                   <div id="nav-chld-7" class="pop-nav-cont">
                     <li id="" class="saas-nav-item-chld">
-                      <a class="nav-link" href="/sermons_form">Make Sermon Notes</a>
+                      <a class="nav-link" href="/sermon_form">Make Sermon Notes</a>
                     </li>
                     <li id="" class="saas-nav-item-chld">
                       <a class="nav-link" href="/sermons">Sermons</a>
+                    </li>
+                  </div>
+
+                  <div class="line-sep"></div>
+                  <!-- Financials  -->
+                  <div id="nav-8" class="saas-nav-item">
+                     Meetings Manager
+                  </div>
+                  <div id="nav-chld-8" class="pop-nav-cont">
+                    <li id="" class="saas-nav-item-chld">
+                      <a class="nav-link" href="/meeting_minutes_form">Upload Minutes</a>
+                    </li>
+                    <li id="" class="saas-nav-item-chld">
+                      <a class="nav-link" href="/minutes">Minutes</a>
                     </li>
                   </div>
                   <!-- <li class="other-nav-item">
