--- a/templates/pledges_form.html
+++ b/templates/pledges_form.html
@@ -81,7 +81,7 @@
 
         <!-- <div class="line"></div><br> -->
 
-        <form style="background-color:;flex-direction:column;z-index:1000;" 
+        <form style="border:none;flex-direction:column;z-index:1000;" 
             class="" _lpchecked="1" action="" method="post" enctype="multipart/form-data">
       
             {{pledge_form.hidden_tag()}}
