--- a/templates/sermon_notes_form.html
+++ b/templates/sermon_notes_form.html
@@ -38,7 +38,7 @@
 
     <form style="background-color:;flex-direction:column;z-index:1000;" class="church-form" _lpchecked="1" action="" method="post" enctype="multipart/form-data">
         <div class="group">
-            <h1 style="text-align: left;">Church<br> Announcements</h1>
+            <h1 style="text-align: left;">Sermon Notes</h1>
         </div>
         {{notes_form.hidden_tag()}}
 
