--- a/templates/base.html
+++ b/templates/base.html
@@ -289,6 +289,11 @@
                       <a class="nav-link" href="/minutes">Minutes</a>
                     </li>
                   </div>
+                  <a class="nav-link" href="/print_wizard">
+                    <div class="saas-nav-item">
+                      Print
+                  </div>
+                  </a>
                   <!-- <li class="other-nav-item">
                     <a class="nav-link" href="/registered_local">My Local Church</a>
                   </li> -->
