--- a/templates/base.html
+++ b/templates/base.html
@@ -289,6 +289,7 @@
                       <a class="nav-link" href="/minutes">Minutes</a>
                     </li>
                   </div>
+                  <div class="line-sep"></div>
                   <a class="nav-link" href="/print_wizard">
                     <div class="saas-nav-item">
                       Print
