--- a/templates/registrations_form.html
+++ b/templates/registrations_form.html
@@ -18,7 +18,7 @@
     {% endwith %}
 </div>
 <br><br><br>
-<div class="user-info">
+<div class="user-info" id="userinfo">
     <div style="" class="img-cont">
         <div width="90%"><img class="prf-image" src="static/images/{{user.image}}" alt=""/></div>
     </div><br>
