--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2087,6 +2087,38 @@ label span{
     padding:20px 10px;
 }
 
+.tooltip {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+  }
+  
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: rgb(175, 175, 175);
+    color: #070707;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px;
+    font-size:10px;
+    position: absolute;
+    z-index: 2500;
+    bottom: 90%; /* Position the tooltip above the text */
+    left: 50%;
+    margin-left: -60px; /* Center the tooltip */
+    
+    /* Fade in tooltip */
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+  
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+    word-spacing: 0 !important;
+  }
+
 @media print{
     @page {
         margin: 30px; /* Remove default margins */
