--- a/templates/base.html
+++ b/templates/base.html
@@ -171,161 +171,173 @@
               </div>
               <div style="flex-grow:1;"></div>
               {% if current_user.role == 'admin_user'%}
-              <div style="align-self:;" id="float-nav" class="sidenav-list">
-                <div style="position: relative;">
-                <h3 style="color:white">Administration</h3>
+              <div class="nav-scroll">
+                <div style="align-self:;" id="float-nav" class="sidenav-list">
+                  <div style="position: relative;">
+                  <h3 style="color:white">Administration</h3>
 
-                <!-- Membership Manager  -->
-                <div id="nav-1" class="saas-nav-item">
-                    Membership Manager
+                  <!-- Membership Manager  -->
+                  <div id="nav-1" class="saas-nav-item">
+                    <img class="nav-ico" src="static/icons/members-nav.png" />
+                      Membership Manager
+
+                  </div>
+                    <div id="nav-chld-1" class="pop-nav-cont">
+                      <li id="" class="saas-nav-item-chld">
+                        <a class="nav-link" href="/local_members">Local Members</a>
+                      </li>
+                      <li id="" class="saas-nav-item-chld">
+                        <a class="nav-link" href="/members_stats">Statistics</a>
+                      </li>
+                      <li id="" class="saas-nav-item-chld">
+                        <a class="nav-link" href="/loc_commitee_memberships">Committees Members</a>
+                      </li>
+                    </div>
+                  <div class="line-sep"></div>
+
+                  <!-- Event Management  -->
+                  <div id="nav-2" class="saas-nav-item">
+                    <img class="nav-ico" src="static/icons/events-nav.png" />
+                    Event Manager
+                  </div>
+                    <div id="nav-chld-2" class="pop-nav-cont">
+                      <li id="" class="saas-nav-item-chld">
+                        <a class="nav-link" href="/open_event_form">Open Event</a>
+                      </li>
+                      <li id="" class="saas-nav-item-chld">
+                        <a class="nav-link" href="/registrations">Registrations</a>
+                      </li>
+                      <li id="" class="saas-nav-item-chld">
+                        <a class="nav-link" href="/calender">Church Calender</a>
+                      </li>
+                      <li id="" class="saas-nav-item-chld">
+                        <a class="nav-link" href="#">Task Teams</a>
+                      </li>
+                    </div>
+                    <div class="line-sep"></div>
+
+                    <!-- Announcements  -->
+                    <div id="nav-3" class="saas-nav-item">
+                      <img class="nav-ico" src="static/icons/announce-nav.png" />
+                      Announcements
+                    </div>
+                    <div id="nav-chld-3" class="pop-nav-cont">
+                      <li id="" class="saas-nav-item-chld">
+                        <a class="nav-link" href="/announcements_form#userinfo">Make Announcemment</a>
+                      </li>
+                      <li id="" class="saas-nav-item-chld">
+                        <a class="nav-link" href="/announcements">Announcemments</a>
+                      </li>
+                    </div>
+                    <div class="line-sep"></div>
+
+                    <!-- Church Services  -->
+                    <div id="nav-4"  class="saas-nav-item">
+                      <img class="nav-ico" src="static/icons/services-nav.png" />
+                      Church Services
+                    </div>
+                    <div id="nav-chld-4" class="pop-nav-cont">
+                      <li id="" class="saas-nav-item-chld">
+                        <a class="nav-link" href="/church_services_form">Make Service</a>
+                      </li>
+                      <li id="" class="saas-nav-item-chld">
+                        <a class="nav-link" href="/church_services">Church Services</a>
+                      </li>
+                    </div>
+                    <div class="line-sep"></div>
+
+                    <!-- Fundraising  -->
+                    <div id="nav-5" class="saas-nav-item">
+                      <img class="nav-ico" src="static/icons/fundraise-nav.png" />
+                      Fundraising
+                    </div>
+                    <div id="nav-chld-5" class="pop-nav-cont">
+                      <li id="" class="saas-nav-item-chld">
+                        <a class="nav-link" href="/open_pledges_form">Pledges Pocket</a>
+                      </li>
+                      <li id="" class="saas-nav-item-chld">
+                        <a class="nav-link" href="/pledge_form">Make a Pledge</a>
+                      </li>
+                      <li id="" class="saas-nav-item-chld">
+                        <a class="nav-link" href="/pledges">Show Pledges</a>
+                      </li>
+                    </div>
+                    <div class="line-sep"></div>
+                    <!-- Financials  -->
+                    <div id="nav-6" class="saas-nav-item">
+                      <img class="nav-ico" src="static/icons/financials-nav.png" />
+                      Financials 
+                    </div>
+                    <div id="nav-chld-6" class="pop-nav-cont">
+                      <li id="" class="saas-nav-item-chld">
+                        <a class="nav-link" href="/offering_form">Offering Form</a>
+                      </li>
+                      <li id="" class="saas-nav-item-chld">
+                        <a class="nav-link" href="/offering">Offering Reports</a>
+                      </li>
+                    </div>
+
+                    <div class="line-sep"></div>
+                    <!-- Financials  -->
+                    <div id="nav-7" class="saas-nav-item">
+                      <img class="nav-ico" src="static/icons/bible-nav.png" />
+                      Bible Study Materials
+                    </div>
+                    <div id="nav-chld-7" class="pop-nav-cont">
+                      <li id="" class="saas-nav-item-chld">
+                        <a class="nav-link" href="/sermon_form">Make Sermon Notes</a>
+                      </li>
+                      <li id="" class="saas-nav-item-chld">
+                        <a class="nav-link" href="/sermons">Sermons</a>
+                      </li>
+                    </div>
+
+                    <div class="line-sep"></div>
+                    <!-- Financials  -->
+                    <div id="nav-8" class="saas-nav-item">
+                      <img class="nav-ico" src="static/icons/meeting-nav.png" />
+                      Meetings Manager
+                    </div>
+                    <div id="nav-chld-8" class="pop-nav-cont">
+                      <li id="" class="saas-nav-item-chld">
+                        <a class="nav-link" href="/meeting_minutes_form">Upload Minutes</a>
+                      </li>
+                      <li id="" class="saas-nav-item-chld">
+                        <a class="nav-link" href="/minutes">Minutes</a>
+                      </li>
+                    </div>
+                    <div class="line-sep"></div>
+                    <a class="nav-link" href="/print_wizard">
+                      <div class="saas-nav-item">
+                        <img class="nav-ico" src="static/icons/print-nav.png" />
+                        Print
+                    </div>
+                    </a>
+                    <!-- <li class="other-nav-item">
+                      <a class="nav-link" href="/registered_local">My Local Church</a>
+                    </li> -->
+                    <br>
+                    
+
+                    
+                    <!-- <li class="other-nav-item">
+                      <a class="nav-link" href="/edit_app">My Account</a>
+                    </li>
+                    <li class="other-nav-item">
+                      <a class="nav-link" href="/about" >Local Members</a>
+                    </li>
+                    <li class="other-nav-item">
+                      <a class="nav-link" href="/about" >My Church Committees</a>
+                    </li>
+                    <li class="other-nav-item">
+                      <a class="nav-link" href="/about" >My Committee Memberships</a>
+                    </li> -->
+                    <!-- <li class="other-nav-item">
+                      <a class="nav-link" href="/about" >My Committee(s)</a>
+                    </li> -->
                 </div>
-                  <div id="nav-chld-1" class="pop-nav-cont">
-                    <li id="" class="saas-nav-item-chld">
-                      <a class="nav-link" href="/local_members">Local Members</a>
-                    </li>
-                    <li id="" class="saas-nav-item-chld">
-                      <a class="nav-link" href="/members_stats">Statistics</a>
-                    </li>
-                    <li id="" class="saas-nav-item-chld">
-                      <a class="nav-link" href="/loc_commitee_memberships">Committees Members</a>
-                    </li>
-                  </div>
-                <div class="line-sep"></div>
-
-                <!-- Event Management  -->
-                <div id="nav-2" class="saas-nav-item">
-                  Event Manager
+                
                 </div>
-                  <div id="nav-chld-2" class="pop-nav-cont">
-                    <li id="" class="saas-nav-item-chld">
-                      <a class="nav-link" href="/open_event_form">Open Event</a>
-                    </li>
-                    <li id="" class="saas-nav-item-chld">
-                      <a class="nav-link" href="/registrations">Registrations</a>
-                    </li>
-                    <li id="" class="saas-nav-item-chld">
-                      <a class="nav-link" href="/calender">Church Calender</a>
-                    </li>
-                    <li id="" class="saas-nav-item-chld">
-                      <a class="nav-link" href="#">Task Teams</a>
-                    </li>
-                  </div>
-                  <div class="line-sep"></div>
-
-                  <!-- Announcements  -->
-                  <div id="nav-3" class="saas-nav-item">
-                    Announcements
-                  </div>
-                  <div id="nav-chld-3" class="pop-nav-cont">
-                    <li id="" class="saas-nav-item-chld">
-                      <a class="nav-link" href="/announcements_form#userinfo">Make Announcemment</a>
-                    </li>
-                    <li id="" class="saas-nav-item-chld">
-                      <a class="nav-link" href="/announcements">Announcemments</a>
-                    </li>
-                  </div>
-                  <div class="line-sep"></div>
-
-                  <!-- Church Services  -->
-                  <div id="nav-4"  class="saas-nav-item">
-                    Church Services
-                  </div>
-                  <div id="nav-chld-4" class="pop-nav-cont">
-                    <li id="" class="saas-nav-item-chld">
-                      <a class="nav-link" href="/church_services_form">Make Service</a>
-                    </li>
-                    <li id="" class="saas-nav-item-chld">
-                      <a class="nav-link" href="/church_services">Church Services</a>
-                    </li>
-                  </div>
-                  <div class="line-sep"></div>
-
-                  <!-- Fundraising  -->
-                  <div id="nav-5" class="saas-nav-item">
-                    Fundraising
-                  </div>
-                  <div id="nav-chld-5" class="pop-nav-cont">
-                    <li id="" class="saas-nav-item-chld">
-                      <a class="nav-link" href="/open_pledges_form">Pledges Pocket</a>
-                    </li>
-                    <li id="" class="saas-nav-item-chld">
-                      <a class="nav-link" href="/pledge_form">Make a Pledge</a>
-                    </li>
-                    <li id="" class="saas-nav-item-chld">
-                      <a class="nav-link" href="/pledges">Show Pledges</a>
-                    </li>
-                  </div>
-                  <div class="line-sep"></div>
-                  <!-- Financials  -->
-                  <div id="nav-6" class="saas-nav-item">
-                    Financials 
-                  </div>
-                  <div id="nav-chld-6" class="pop-nav-cont">
-                    <li id="" class="saas-nav-item-chld">
-                      <a class="nav-link" href="/offering_form">Offering Form</a>
-                    </li>
-                    <li id="" class="saas-nav-item-chld">
-                      <a class="nav-link" href="/offering">Offering Reports</a>
-                    </li>
-                  </div>
-
-                  <div class="line-sep"></div>
-                  <!-- Financials  -->
-                  <div id="nav-7" class="saas-nav-item">
-                    Bible Study Materials
-                  </div>
-                  <div id="nav-chld-7" class="pop-nav-cont">
-                    <li id="" class="saas-nav-item-chld">
-                      <a class="nav-link" href="/sermon_form">Make Sermon Notes</a>
-                    </li>
-                    <li id="" class="saas-nav-item-chld">
-                      <a class="nav-link" href="/sermons">Sermons</a>
-                    </li>
-                  </div>
-
-                  <div class="line-sep"></div>
-                  <!-- Financials  -->
-                  <div id="nav-8" class="saas-nav-item">
-                     Meetings Manager
-                  </div>
-                  <div id="nav-chld-8" class="pop-nav-cont">
-                    <li id="" class="saas-nav-item-chld">
-                      <a class="nav-link" href="/meeting_minutes_form">Upload Minutes</a>
-                    </li>
-                    <li id="" class="saas-nav-item-chld">
-                      <a class="nav-link" href="/minutes">Minutes</a>
-                    </li>
-                  </div>
-                  <div class="line-sep"></div>
-                  <a class="nav-link" href="/print_wizard">
-                    <div class="saas-nav-item">
-                      Print
-                  </div>
-                  </a>
-                  <!-- <li class="other-nav-item">
-                    <a class="nav-link" href="/registered_local">My Local Church</a>
-                  </li> -->
-                  <br>
-                  
-
-                  
-                  <!-- <li class="other-nav-item">
-                    <a class="nav-link" href="/edit_app">My Account</a>
-                  </li>
-                  <li class="other-nav-item">
-                    <a class="nav-link" href="/about" >Local Members</a>
-                  </li>
-                  <li class="other-nav-item">
-                    <a class="nav-link" href="/about" >My Church Committees</a>
-                  </li>
-                  <li class="other-nav-item">
-                    <a class="nav-link" href="/about" >My Committee Memberships</a>
-                  </li> -->
-                  <!-- <li class="other-nav-item">
-                    <a class="nav-link" href="/about" >My Committee(s)</a>
-                  </li> -->
-              </div>
-              
               </div>
               {%endif%}
 
