--- a/templates/base.html
+++ b/templates/base.html
@@ -126,6 +126,8 @@
     </div>
     {%endif%}
 
+
+
     <!-- Side Navigation  -->
     <div  id="side-navig-bg" class="side-nav-bg ">
       <div id="side-navig-cont" class="side-nav-cont move-to-appear gen-flex-col">
@@ -182,7 +184,6 @@
                   <div id="nav-1" class="saas-nav-item">
                     <img class="nav-ico" src="static/icons/members-nav.png" />
                       Membership Manager
-
                   </div>
                     <div id="nav-chld-1" class="pop-nav-cont">
                       <li id="" class="saas-nav-item-chld">
@@ -207,14 +208,14 @@
                         <a class="nav-link" href="/open_event_form">Open Event</a>
                       </li>
                       <li id="" class="saas-nav-item-chld">
-                        <a class="nav-link" href="/registrations">Registrations</a>
+                        <a class="nav-link" href="/registrations">Register Online</a>
                       </li>
                       <li id="" class="saas-nav-item-chld">
                         <a class="nav-link" href="/calender">Church Calender</a>
                       </li>
-                      <li id="" class="saas-nav-item-chld">
+                      <!-- <li id="" class="saas-nav-item-chld">
                         <a class="nav-link" href="#">Task Teams</a>
-                      </li>
+                      </li> -->
                     </div>
                     <div class="line-sep"></div>
 
