--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,13 @@
             <div class="caption"></div>
         </div>
     </a>
+    <a class="nav-lin" href="/sermon_form">
+        <div class="cont-card gen-flex-col">
+            <img style="height:60px" src="static/icons/add-icon.png" />
+            <div class="btn-desc">Sermon</div>
+            <div class="caption"></div>
+        </div>
+    </a>
     <a class="nav-lin" href="/open_pledges_form">
         <div class="cont-card gen-flex-col">
             <img style="height:60px" src="static/icons/add-icon.png" />
@@ -51,10 +58,23 @@
             <div class="caption"></div>
         </div>
     </a>
+    <a class="nav-lin" href="/meeting_minutes_form">
+        <div class="cont-card gen-flex-col">
+            <img style="height:60px" src="static/icons/add-icon.png" />
+            <div class="btn-desc">Upload Minutes</div>
+            <div class="caption"></div>
+        </div>
+    </a>
     <a class="nav-lin" href="/calender_form">
         <div class="cont-card gen-flex-col">
             <img style="height:60px" src="static/icons/add-icon.png" />
             <div class="btn-desc">Events Calender</div>
+            <div class="caption"></div>
+        </div>
+    </a> <a class="nav-lin" href="/offering_form">
+        <div class="cont-card gen-flex-col">
+            <img style="height:60px" src="static/icons/add-icon.png" />
+            <div class="btn-desc">Offering Form</div>
             <div class="caption"></div>
         </div>
     </a>
@@ -66,6 +86,13 @@
         </div>
     </a>
 {% endif %}
+    <a class="nav-lin" href="/offering">
+        <div class="cont-card gen-flex-col">
+            <img style="height:40px" src="static/icons/money-icon.png" />
+            <div class="btn-desc">Offering Reports</div>
+            <div class="caption"></div>
+        </div>
+    </a>
     <a class="nav-lin" href="/members_stats">
         <div class="cont-card gen-flex-col">
             <img style="height:40px" src="static/icons/statistics-icon.png" />
@@ -80,6 +107,13 @@
             <div class="caption"></div>
         </div>
     </a>
+    <a class="nav-lin" href="/sermons">
+        <div class="cont-card gen-flex-col">
+            <img style="height:40px" src="static/icons/bible-icon.png" />
+            <div class="btn-desc">Sermons</div>
+            <div class="caption"></div>
+        </div>
+    </a>
     <a class="nav-lin" href="/announcements">
         <div class="cont-card gen-flex-col">
             <img style="height:40px" src="static/icons/announcements-icon.png" />
@@ -89,8 +123,15 @@
     </a>
     <a class="nav-lin" href="/loc_commitee_memberships">
         <div class="cont-card gen-flex-col">
-            <img style="height:40px" src="static/icons/committees-icon.png" />
+            <img style="height:40px" src="static/icons/committee-icon.png" />
             <div class="btn-desc">Committees</div>
+            <div class="caption"></div>
+        </div>
+    </a>
+    <a class="nav-lin" href="/minutes">
+        <div class="cont-card gen-flex-col">
+            <img style="height:40px" src="static/icons/committee-icon.png" />
+            <div class="btn-desc">Church Meetings</div>
             <div class="caption"></div>
         </div>
     </a>
@@ -112,6 +153,13 @@
         <div class="cont-card gen-flex-col">
             <img style="height:40px" src="static/icons/pledge-icon.png" />
             <div class="btn-desc">Pledge (Fundraise)</div>
+            <div class="caption"></div>
+        </div>
+    </a>
+    <a class="nav-lin" href="/print_wizard">
+        <div class="cont-card gen-flex-col">
+            <img style="height:40px" src="static/icons/printer-icon.png" />
+            <div class="btn-desc">Print</div>
             <div class="caption"></div>
         </div>
     </a>
