--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
     {% endwith %}
 </div>
 <br><br>
-<div class="gen-flex-wrap sel-img" style="width:100%"><img style="height:400px" src="static/images/ad_pics.png" /></div>
+<div class="gen-flex-wrap sel-img" style="width:100%;margin: 10px auto;"><img style="height:300px" src="static/images/ad_pics.png" /></div>
 <div class="selling-tag">"Eswatini's Premier Church Platform for Membership, Communication, Event Management, Fundraising, and More!"</div>
 <br><br>
 <div style="" class="container">
