--- a/templates/index.html
+++ b/templates/index.html
@@ -238,7 +238,7 @@
     <div id="narrow-screen" class="block-event">
         <!-- absolute to parent -->
         <div id="left-pan-phone" class="block-left-pan">
-            <h1 class="event-title-mob" style="margin-bottom:0;color:rgb(255, 255, 255)">{{event_details.event_title}} <br>
+            <h1 class="event-title-mob evt-title" style="margin-bottom:0;color:rgb(255, 255, 255)">{{event_details.event_title}} <br>
                 <span style="font-size:medium;font-weight:500 ;"></span></h1>
             <img class="event-img-bg" src="static/images/fea-sample.jpg" /> 
         </div>
