--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3347,9 +3347,8 @@ small{
         position: absolute;
         left:50%;
         top:50%;
-        transform: translate(-50%,-50%) scale(1);
+        transform: translate(-50%,-50%);
         z-index:2;
-        transform:; 
         /* transform: translateY(-50%); */
     }
 
