--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-{%block content%}
+
 <div class="banner-ad-cont">
     <div class="app-logo-cont gen-flex-col">
         <img style="height:150px" src="static\icons\cammsys_logo_icon.png" />
@@ -28,9 +28,10 @@
     </div>
     
 </div>
+
 <div class="bg-img">
- 
 </div>
+
 <div  class="ad-with-img">
     <div style="width:100%; max-width: 1100px;margin:0 auto;justify-content: flex-start;padding-top: 20px; " class="gen-flex-wrap">
         <div class="features-card gen-flex-col">
@@ -90,7 +91,9 @@
     </div>
 
 </div>
+
 <h1 style="margin: 0 auto;">Explore CAMM Sys+</h1>
+
 <div style="background: white;padding-top: 15px;"  class="ad-with-img gen-flex-col"><br>
     <h3>A user-friendly and intuitive interface designed specifically for church administrators</h3>
     <img class="menu-img" src="static/images/menu.jpg" />
@@ -103,7 +106,9 @@
         <img class="phone-img" src="static/images/pledges_form.jpg" />
     </div>
 </div>
+
 <h1 style="margin: 0 auto;">Explore Live Demo</h1>
+
 <div style="background: white;padding-top: 15px;"  class="ad-with-img gen-flex-col"><br>
     <h2>We craft custome-made Church Apps that are specifically tailored for your church administration needs</h2>
     <img class="menu-img" src="static/images/ad_pics.png" />
@@ -114,4 +119,5 @@
     <br><br>
 </div>
 
-{%endblock%}
+</body>
+</html>
